Bug 1201703 - [Control Center] Icons overlap text and are on the wrong side for the RTL locales. r=paolo
UltraBlame original commit: 20bb8fec6bad03a2c512bc6132533484f71abcca

--- a/browser/themes/shared/controlcenter/panel.inc.css
+++ b/browser/themes/shared/controlcenter/panel.inc.css
@@ -1849,6 +1849,53 @@ repeat
 %
 ;
 }
+.
+identity
+-
+popup
+-
+warning
+-
+gray
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+identity
+-
+popup
+-
+warning
+-
+yellow
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+position
+:
+100
+%
+50
+%
+;
+}
 /
 *
 SECURITY
